Fix footer on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -226,6 +226,8 @@ footer {
     background-color: var(--site-secondary-background-color);
     padding-top: 4px;
     min-height: 42px;
+    flex-shrink: 0;
+    margin-top: 20px;
 }
 .copyright-box {
     color: var(--site-secondary-text-color);
